[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbon"
dynamic = ["version"]
description = "The database from hell."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
host = [
    "aiosqlite>=0.21.0",
]
client = [
    "nanoid>=2.0.0",
]

[tool.hatch.version]
path = "nova/__init__.py"
